tests/serde_yaml_seeming_incoherence_with_serde_json/caught.stderr
error[E0277]: the trait bound `serde_yaml::Value: From<Option<conjockey::Integer>>` is not satisfied
  --> tests/serde_yaml_seeming_incoherence_with_serde_json/caught.rs:20:33
   |
20 |         Into::<YamlValue>::into(Some(Integer(501))),
   |         ----------------------- ^^^^^^^^^^^^^^^^^^ the trait `From<Option<conjockey::Integer>>` is not implemented for `serde_yaml::Value`
   |         |
   |         required by a bound introduced by this call
   |
   = help: the following other types implement trait `From<T>`:
             `serde_yaml::Value` implements `From<&[T]>`
             `serde_yaml::Value` implements `From<&str>`
             `serde_yaml::Value` implements `From<Cow<'_, str>>`
             `serde_yaml::Value` implements `From<Vec<T>>`
             `serde_yaml::Value` implements `From<bool>`
             `serde_yaml::Value` implements `From<f32>`
             `serde_yaml::Value` implements `From<f64>`
             `serde_yaml::Value` implements `From<i16>`
           and $N others
   = note: required for `Option<conjockey::Integer>` to implement `Into<serde_yaml::Value>`

error[E0277]: the trait bound `serde_yaml::Value: From<Option<conjockey::Value>>` is not satisfied
  --> tests/serde_yaml_seeming_incoherence_with_serde_json/caught.rs:27:33
   |
27 |         Into::<YamlValue>::into(Some(Value::Integer(Integer(501)))),
   |         ----------------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<Option<conjockey::Value>>` is not implemented for `serde_yaml::Value`
   |         |
   |         required by a bound introduced by this call
   |
   = help: the following other types implement trait `From<T>`:
             `serde_yaml::Value` implements `From<&[T]>`
             `serde_yaml::Value` implements `From<&str>`
             `serde_yaml::Value` implements `From<Cow<'_, str>>`
             `serde_yaml::Value` implements `From<Vec<T>>`
             `serde_yaml::Value` implements `From<bool>`
             `serde_yaml::Value` implements `From<f32>`
             `serde_yaml::Value` implements `From<f64>`
             `serde_yaml::Value` implements `From<i16>`
           and $N others
   = note: required for `Option<conjockey::Value>` to implement `Into<serde_yaml::Value>`
